--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "botName": "Isagi Bot",
   "packname": "IsagiBot",
   "author": "Fizzx",
-  "pathimg": "./media/yoshino.jpg",
+  "pathimg": "./media/harley.jpg",
   "apikey": {
     "caliph": "caliphkey",
     "miko": "Mikokey"
